tests/invalid/list_index_non_int/main.py
def run_case() -> None:
    a: list[int] = [1, 2, 3]

    b: float = 1.0

    print(a[b])

if __name__ == "__main__":
    run_case()
